# VideoEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TimelineMarks.cpp  TimelineMarks.h  VEMainWindow.cpp  VEMainWindow.h  VEMainWindow.ui  VideoEditor.gfie  VideoEditor.qrc  VideoEditor.rc  VideoPlayer.cpp  VideoPlayer.h  VideoPreset.cpp  VideoPreset.h  VideoSlider.cpp  VideoSlider.h  ffmpeg.cpp  ffmpeg.h  main.cpp  version.h.in  version.rc.in
cmake/: FindFFmpeg.cmake
functional/: CMakeLists.txt  test_VideoTranscoder.cpp
src/: CMakeLists.txt  Codec.h  CropRectangle.cpp  CropRectangle.h  EncodingPreset.cpp  EncodingPreset.h  EncodingPreset.ui  ProcessRunnerDialog.cpp  ProcessRunnerDialog.h  ProcessRunnerDialog.ui  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TimelineMarks.cpp  TimelineMarks.h  Tools.cpp  Tools.h  VEMainWindow.cpp  VEMainWindow.h  VEMainWindow.ui  VideoPlayer.cpp  VideoPlayer.h  VideoPreset.cpp  VideoPreset.h  VideoRecode.cpp  VideoRecode.h  VideoTranscoder.cpp  VideoTranscoder.h  codec_aac.cpp  codec_aac.h  codec_dnxhd.cpp  codec_dnxhd.h  codec_pcms24le.cpp  codec_pcms24le.h  codec_x264.cpp  codec_x264.h  codec_x265.cpp  codec_x265.h  (+5 more)
test/: CMakeLists.txt  ffmpegMock.cpp  ffmpegMock.h  main.cpp  test_CropRectangle.cpp  test_EncodingPreset.cpp  test_VideoSlider.cpp  test_VideoTranscoder.cpp  tst_videoeditor.cpp
translations/: VideoEditor_pl.ts
